# archive

./: .gitattributes  README.md  archive  arrayoff.sh.gpg  c29ja2V0cy1wcm9qZWN0LnRhci54ei5ncGcK.gpg  compress-cpio.sh  create-admin.sh  current-iptables.rules  dmg-test.sh  dunkered.sh  firewallup.sh  frankensteinian.txt  genbackup.sh  getMyPublicIp.py  getdisplay.sh  gitclone.sh  gitup.sh  gpg.rm  grabscreen.sh  group-rw-permissions.sh  helpful-tarchains.sh  intolerant.py  mkdir  osirisKohmet.py  relativeSplit.sh  sanEbill.py  screengrab.sh  seeLine-raw  useable-qemu.sh
BUDS/: README.md  buds  install.sh
DeskOS/: README.md  Teamviewer.desktop  arch_check.py  installers.sh  package-i.sh  packages-aur.lst  packages-manual.sh  packages.lst  pacman-fix.sh  passwd.sh  samba-setup.sh  service-toggle  setup.sh  vnc-setup.sh
Julius/: julius-functions.notes  notes
LAMP_install/: blowfishSecretGen.py  depCheck.sh  lampinstall.sh
SecureFile/: SecureFile.py  depends.list  extraparts.py
Striker/: striker.py
archassault-install/: README.txt  set.add-entry  set.list  set.main  set.mod-entry  set.pacman-update  set.rebuild
archlinux-prep/: aurgen.sh  aurpack.install  err  final.txt  install-linux49.sh  pk2.txt  readme.txt  rem.py  remove.txt  yaourt-packages.txt  yi.sh
backup-fix/: backup.py  totitan  (+2 more)
cputool/cputool-deb2arch/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  cputool.8  cputool.c  cputool.h  manpage.links
cputool/cputool-deb2arch/.deps/: cputool.Po
cputool/cputool-deb2arch/debian/: changelog  clean  control  watch
cputool/cputool-deb2arch/debian/upstream/: signing-key.asc
cputool/cputool-deb2arch/doc/: cputool.sgml
(+1814 files in other folders)
